--- a/config/environments/config.rb.sample
+++ b/config/environments/config.rb.sample
@@ -5,17 +5,18 @@
 
 begin
   LinkedData.config do |config|
-    config.repository_folder  = "/srv/ncbo/repository"
-    config.goo_host           = "localhost"
-    config.goo_port           = 8081
-    config.search_server_url  = "http://localhost:8082/solr/core1"
-    config.rest_url_prefix    = "http://#{$SITE_URL}:8080/"
-    config.replace_url_prefix = true
-    config.enable_security    = true
-    config.apikey             = "24e0e77e-54e0-11e0-9d7b-005056aa3316"
-    config.ui_host            = "http://#{$SITE_URL}"
-    config.enable_monitoring  = false
-    config.cube_host          = "localhost"
+    config.repository_folder     = "/srv/ncbo/repository"
+    config.goo_host              = "localhost"
+    config.goo_port              = 8081
+    config.search_server_url     = "http://localhost:8082/solr/core1"
+    config.rest_url_prefix       = "http://#{$SITE_URL}:8080/"
+    config.replace_url_prefix    = true
+    config.enable_security       = true
+    config.apikey                = "24e0e77e-54e0-11e0-9d7b-005056aa3316"
+    config.ui_host               = "http://#{$SITE_URL}"
+    config.enable_monitoring     = false
+    config.cube_host             = "localhost"
+    config.enable_resource_index = false
 
     # Used to define other BioPortal to which this appliance can be mapped to
     # Example to map to the NCBO BioPortal : {"ncbo" => {"api" => "http://data.bioontology.org", "ui" => "http://bioportal.bioontology.org", "apikey" => ""}}
