update docker CI to work in production releases

--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -6,7 +6,8 @@ on:
       - development
       - stage
       - test
-
+  release:
+    types: [ published ]
 jobs:
   push_to_registry:
     name: Push Docker branch image to Docker Hub
