updated ontologies_linked_data version

--- a/.gitignore
+++ b/.gitignore
@@ -11,12 +11,14 @@ spec/reports
 test/tmp
 test/version_tmp
 tmp
+vendor
 log/**
 logs/**
 .tags*
 cache/**
 vendor/bundle/*
 ontologies_api.iml
+.env
 
 # YARD artifacts
 .yardoc
