--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,5 @@
 x-app: &app
-  build:
-    context: .
-    args:
-      RUBY_VERSION: '2.7'
-  # Increase the version number in the image tag every time Dockerfile or its arguments is changed
-  image: ontologies_ld-dev:0.0.2
+  image: agroportal/ontologies_api:development
   environment: &env
     # default bundle config resolves to /usr/local/bundle/config inside of the container
     # we are setting it to local app directory if we need to use 'bundle config local'
@@ -13,15 +8,15 @@ x-app: &app
     COVERAGE: 'true' # enable simplecov code coverage
     REDIS_HOST: redis-ut
     REDIS_PORT: 6379
-    SOLR_TERM_SEARCH_URL: http://solr-term-ut:8983/solr/term_search_core1
-    SOLR_PROP_SEARCH_URL: http://solr-prop-ut:8984/solr/prop_search_core1
+    SOLR_TERM_SEARCH_URL: http://solr-ut:8983/solr
+    SOLR_PROP_SEARCH_URL: http://solr-ut:8983/solr
   stdin_open: true
   tty: true
   command: /bin/bash
   volumes:
     # bundle volume for hosting gems installed by bundle; it speeds up gem install in local development
     - bundle:/srv/ontoportal/bundle
-    - .:/srv/ontoportal/ontologies_linked_data
+    - .:/srv/ontoportal/ontologies_api
     # mount directory containing development version of the gems if you need to use 'bundle config local'
     #- /Users/alexskr/ontoportal:/Users/alexskr/ontoportal
   depends_on: &depends_on
@@ -33,6 +28,27 @@ x-app: &app
       condition: service_healthy
 
 services:
+  api:
+    <<: *app
+    env_file:
+      .env
+    environment:
+      <<: *env
+      GOO_BACKEND_NAME: 4store
+      GOO_PORT: 9000
+      GOO_HOST: 4store-ut
+      GOO_PATH_QUERY: /sparql/
+      GOO_PATH_DATA: /data/
+      GOO_PATH_UPDATE: /update/
+    profiles:
+      - 4store
+    depends_on:
+      - solr-ut
+      - redis-ut
+      - mgrep-ut
+      - 4store-ut
+    ports:
+      - "9393:9393"
 
   mgrep-ut:
     image: ontoportal/mgrep-ncbo:0.1
@@ -52,20 +68,24 @@ services:
 
   4store-ut:
     image: bde2020/4store
+    volumes:
+      - 4store:/var/lib/4store
     command: >
-      bash -c "4s-backend-setup --segments 4 ontoportal_kb
-      && 4s-backend ontoportal_kb
-      && 4s-httpd -D -s-1 -p 9000 ontoportal_kb"
+      bash -c "if [ ! -d '/var/lib/4store/ontoportal_kb' ]; then 4s-backend-setup --segments 4 ontoportal_kb; fi ; 4s-backend ontoportal_kb ; 4s-httpd -D -s-1 -p 9000 ontoportal_kb"
+
     ports:
       - "9000:9000"
     profiles:
       - fs
+      - 4store
 
   solr-ut:
-      image: solr:8
-      ports:
-        - 8983:8983
-      command: bin/solr start -cloud -f
+    image: solr:8
+    ports:
+      - 8983:8983
+    command: bin/solr start -cloud -f
+   # volumes:
+      #- solr_data:/var/solr/data
   agraph-ut:
     image: franzinc/agraph:v8.0.0.rc1
     platform: linux/amd64
@@ -134,3 +154,5 @@ services:
 volumes:
   bundle:
   agdata:
+  4store:
+  #solr_data:
