align development branch with development docker image

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,5 @@
 x-app: &app
-  image: agroportal/ontologies_api:master
+  image: agroportal/ontologies_api:development
   environment: &env
     # default bundle config resolves to /usr/local/bundle/config inside of the container
     # we are setting it to local app directory if we need to use 'bundle config local'
