--- a/.env.sample
+++ b/.env.sample
@@ -6,6 +6,6 @@ SPARQL_CLIENT_PATH=
 ## An ontology that will be imported in the starting of the API server
 STARTER_ONTOLOGY=STY
 ## API key of a remote API used to download the starter ontology
-OP_API_KEY=8b5b7825-538d-40e0-9e9e-5ab9274a9aeb
+OP_API_KEY=1de0a270-29c5-4dda-b043-7c3580628cd5
 ## API url of the remote API used to download the starter ontology
-OP_API_URL="https://data.bioontology.org"
+OP_API_URL="https://data.agroportal.lirmm.fr"
