--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,27 +19,28 @@ name: Capistrano Deployment
 on:
   push:
     branches:
-      - stage
+      - development
       - test
   # Allows running this workflow manually from the Actions tab
   workflow_dispatch:
     inputs:
       BRANCH:
         description: "Branch/tag to deploy"
+        type: choice
         options:
-          - stage
           - test
+          - development
           - master
-        default: stage
+        default: development
         required: true
       environment:
         description: "target environment to deploy to"
         type: choice
         options:
+          - test
           - staging
           - agroportal
-          - test
-        default: stage
+        default: staging
 jobs:
   deploy:
     runs-on: ubuntu-latest
