use development branch for ncbo_cron gem

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -58,7 +58,7 @@ services:
 
   ncbo_cron:
     <<: *app
-    image: agroportal/ncbo_cron:master
+    image: agroportal/ncbo_cron:development
     env_file:
       .env
     environment:
