feat: implement PostgreSQL database integration and notification system

--- a/.env.sample
+++ b/.env.sample
@@ -4,9 +4,20 @@ GOO_PATH=
 SPARQL_CLIENT_PATH=
 NCBO_PATH=
 
+REDIS_GOO_CACHE_HOST=redis-ut
+REDIS_HTTP_CACHE_HOST=redis-ut
+REDIS_PERSISTENT_HOST=redis-ut
+
 ## An ontology that will be imported in the starting of the API server
 STARTER_ONTOLOGY=STY
 ## API key of a remote API used to download the starter ontology
 OP_API_KEY=1de0a270-29c5-4dda-b043-7c3580628cd5
 ## API url of the remote API used to download the starter ontology
 OP_API_URL="https://data.agroportal.lirmm.fr"
+
+## PostgreSQL Database
+DATABASE_HOST=postgres-ut
+DATABASE_PORT=5432
+DATABASE_NAME=ontologies_api_development
+DATABASE_USER=ontoportal
+DATABASE_PASSWORD=ontoportal
