feat: Add notifications feature with email support
- Introduced NotificationsController to manage user notifications.
- Implemented EmailNotificationJob for sending email notifications using Pony.
- Enhanced Notification model to support multiple channels (in-app and email).
- Added Notifier class for sending welcome emails and notifying support.
- Updated UsersController to send welcome emails upon user creation.
- Created views for email templates: welcome_email, new_user, and new_note.
- Updated Docker configuration to include necessary volumes and commands.
- Added support for SMTP configuration in the application settings.
- Created migration for notifications table with new fields.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -62,6 +62,7 @@ services:
       # bundle volume for hosting gems installed by bundle; it speeds up gem install in local development
       - .:/srv/ontoportal/ontologies_api
       - repository:/srv/ontoportal/data/repository
+      - bundle:/srv/ontoportal/bundle
     command: >
       bash -c "bundle exec rake db:migrate && bundle exec rackup -p 9393 --host 0.0.0.0"
   sidekiq:
@@ -71,9 +72,12 @@ services:
       <<: *env
       BUNDLE_APP_CONFIG: /srv/ontoportal/ontologies_api/.bundle
 
-    command: bundle exec sidekiq -C /srv/ontoportal/ontologies_api/config/sidekiq.yml  -r /srv/ontoportal/ontologies_api/app.rb  --env=development
+    command: >
+      sh -c "bundle check || bundle install &&
+             bundle exec sidekiq -C /srv/ontoportal/ontologies_api/config/sidekiq.yml -r /srv/ontoportal/ontologies_api/app.rb --env=development"
     volumes:
       - app_api:/srv/ontoportal/ontologies_api
+      - bundle:/srv/ontoportal/bundle
     depends_on:
       redis-ut:
         condition: service_healthy
@@ -231,3 +235,4 @@ volumes:
   mgrep:
   logs:
   history:
+  bundle:
