--- a/config/database.yml
+++ b/config/database.yml
@@ -19,10 +19,10 @@ test:
   username: <%= ENV.fetch("DATABASE_USER", "ontoportal") %>
   password: <%= ENV.fetch("DATABASE_PASSWORD", "ontoportal") %>
 
-production:
+appliance:
   <<: *default
-  host: <%= ENV["DATABASE_HOST"] %>
+  host: <%= ENV.fetch("DATABASE_HOST", "localhost") %>
   port: <%= ENV.fetch("DATABASE_PORT", 5432) %>
-  database: <%= ENV["DATABASE_NAME"] %>
-  username: <%= ENV["DATABASE_USER"] %>
-  password: <%= ENV["DATABASE_PASSWORD"] %>
+  database: <%= ENV.fetch("DATABASE_NAME", "ontologies_api_appliance") %>
+  username: <%= ENV.fetch("DATABASE_USER", "ontoportal") %>
+  password: <%= ENV.fetch("DATABASE_PASSWORD", "ontoportal") %>
